RESOLVED FIXED228891
Vertical scroll with mouse wheel in horizontal scroller fails to propagate to the document
https://bugs.webkit.org/show_bug.cgi?id=228891
Summary Vertical scroll with mouse wheel in horizontal scroller fails to propagate to...
Simon Fraser (smfr)
Reported 2021-08-06 21:37:18 PDT
Vertical scroll with mouse wheel in horizontal scroller fails to propagate to the document
Attachments
Patch (11.10 KB, patch)
2021-08-06 21:44 PDT, Simon Fraser (smfr)
koivisto: review+
ews-feeder: commit-queue-
Patch (13.50 KB, patch)
2021-08-09 13:38 PDT, Simon Fraser (smfr)
ews-feeder: commit-queue-
Simon Fraser (smfr)
Comment 1 2021-08-06 21:44:53 PDT
Simon Fraser (smfr)
Comment 2 2021-08-06 21:44:57 PDT
Simon Fraser (smfr)
Comment 3 2021-08-07 11:14:14 PDT
The test failure is real, but only occurs with async overflow scrolling disabled.
Simon Fraser (smfr)
Comment 4 2021-08-09 13:38:32 PDT
EWS
Comment 5 2021-08-09 16:41:36 PDT
Committed r280807 (240377@main): <https://commits.webkit.org/240377@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435207 [details].
Simon Fraser (smfr)
Comment 6 2021-08-25 13:26:00 PDT
*** Bug 229390 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.